--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Brianary
-description: Stuff I code.
-google_analytics: UA-61854432-1
+title: dataelemental
+description: Coding to data formats and querying.
 show_downloads: false
 theme: jekyll-theme-slate
 markdown: GFM
