🔥 Remove pages hosted at webcoder.info

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: dataelemental
-description: Coding to data formats and querying.
+description: Coding to data formats and querying
 show_downloads: false
 theme: jekyll-theme-slate
 markdown: GFM
